[package]
name = "rust_disruptor"
version = "0.1.0"
edition = "2024"

[dependencies]
core_affinity = "0.8"

[profile.release]
lto = true
# codegen-units = 1 # Can sometimes improve optimizations at the cost of longer compile times
# panic = 'abort'   # Can slightly reduce binary size and overhead if panics are not expected to be caught

[features]
default = []
phased_backoff_test = []

[lib]
name = "rust_disruptor"
path = "src/lib.rs"

[[bin]]
name = "basic_main"
path = "src/bin/basic_main.rs"

[[bin]]
name = "perf_affinity_main"
path = "src/bin/perf_affinity_main.rs"

[[bin]]
name = "perf_main"
path = "src/bin/perf_main.rs"
